update: обновил проект

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="contact-info">
                             <p class="contact-title">Email</p>
 
-                            <a href="mailto:richard@example.com" class="contact-link">baibolatova003@gmail.com</a>
+                            <a href="mailto:baibolatova003@gmail.com" class="contact-link">baibolatova003@gmail.com</a>
                         </div>
                     </li>
 
